add support for multiple datasets

--- a/packages/core/styles/charts.scss
+++ b/packages/core/styles/charts.scss
@@ -2,6 +2,10 @@ $fill-default: #00A9E0;
 $fill-default-hover: #19C2F9;
 $fill-secondary: #004C97;
 $fill-secondary-hover: #1965B0;
+$fill-tertiary: #e0a700;
+$fill-tertiary-hover: #ffc314;
+$fill-quaternary: #c70033;
+$fill-quaternary-hover: #e00039;
 $titleColor: #011a3c;
 $legendLabelColor: #333333;
 $gridLineColor: #53565a40;
