--- a/packages/core/styles/export.scss
+++ b/packages/core/styles/export.scss
@@ -6,6 +6,10 @@
 		fillDefaultHover: $fill-default-hover;
 		fillSecondary: $fill-secondary;
 		fillSecondaryHover: $fill-secondary-hover;
+		fillTertiary: $fill-tertiary;
+		fillTertiaryHover: $fill-tertiary-hover;
+		fillQuaternary: $fill-quaternary;
+		fillQuaternaryHover: $fill-quaternary-hover;
 		titleColor: $titleColor;
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
