add custom tooltips

--- a/packages/core/styles/export.scss
+++ b/packages/core/styles/export.scss
@@ -14,4 +14,5 @@
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
 		gridLabelColor: $gridLabelColor;
+		tooltipText: $tooltipText;
 }
