fix data format display in tool tip, minor refactoring and update documentation

--- a/packages/core/styles/charts.scss
+++ b/packages/core/styles/charts.scss
@@ -1,11 +1,15 @@
 $fill-default: #00A9E0;
 $fill-default-hover: #19C2F9;
+$fill-default-hover-light: #00a9e033;
 $fill-secondary: #004C97;
 $fill-secondary-hover: #1965B0;
+$fill-secondary-hover-light: #004C9733;
 $fill-tertiary: #e0a700;
 $fill-tertiary-hover: #ffc314;
+$fill-tertiary-hover-light: #e0a70033;
 $fill-quaternary: #c70033;
 $fill-quaternary-hover: #e00039;
+$fill-quaternary-hover-light: #c7003333;
 $titleColor: #011a3c;
 $legendLabelColor: #333333;
 $gridLineColor: #53565a40;
