--- a/packages/core/styles/export.scss
+++ b/packages/core/styles/export.scss
@@ -4,12 +4,16 @@
 		// Export variables to make them accessible to JS
 		fillDefault: $fill-default;
 		fillDefaultHover: $fill-default-hover;
+		fillDefaultHoverLight: $fill-default-hover-light;
 		fillSecondary: $fill-secondary;
 		fillSecondaryHover: $fill-secondary-hover;
+		fillSecondaryHoverLight: $fill-secondary-hover-light;
 		fillTertiary: $fill-tertiary;
 		fillTertiaryHover: $fill-tertiary-hover;
+		fillTertiaryHoverLight: $fill-tertiary-hover-light;
 		fillQuaternary: $fill-quaternary;
 		fillQuaternaryHover: $fill-quaternary-hover;
+		fillQuaternaryHoverLight: $fill-quaternary-hover-light;
 		titleColor: $titleColor;
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
