fix version and other issues from review

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -1,3 +1,5 @@
+@import "~@dpc-sdp/ripple-global/style";
+
 $fill-default: #00A9E0;
 $fill-default-hover: #19C2F9;
 $fill-default-hover-light: #00a9e033;
