add tree map chart, refactor bar and line charts and fix bugs with sizing of chart components

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -12,6 +12,8 @@ $fill-tertiary-hover-light: #e0a70033;
 $fill-quaternary: #c70033;
 $fill-quaternary-hover: #e00039;
 $fill-quaternary-hover-light: #c7003333;
+$tree-map-fill-default: #b2e6f6;
+$tree-map-fill-default-hover: #19C2F9;
 $titleColor: #011a3c;
 $legendLabelColor: #333333;
 $gridLineColor: #53565a40;
