--- a/packages/global/styles/export.scss
+++ b/packages/global/styles/export.scss
@@ -14,6 +14,8 @@
 		fillQuaternary: $fill-quaternary;
 		fillQuaternaryHover: $fill-quaternary-hover;
 		fillQuaternaryHoverLight: $fill-quaternary-hover-light;
+		treeMapFillDefault: $tree-map-fill-default;
+		treeMapFillDefaultHover: $tree-map-fill-default-hover;
 		titleColor: $titleColor;
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
