add pie chart component

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -19,3 +19,30 @@ $legendLabelColor: #333333;
 $gridLineColor: #53565a40;
 $gridLabelColor: #53565a;
 $tooltipText: #011a3c;
+
+// pie chart
+$fill-pie-1: #fb8072;
+$fill-pie-2: #80b1d3;
+$fill-pie-3: #8dd3c7;
+$fill-pie-4: #ffffb3;
+$fill-pie-5: #bebada;
+$fill-pie-6: #fdb462;
+$fill-pie-7: #b3de69;
+$fill-pie-8: #fccde5;
+$fill-pie-9: #ffed6f;
+$fill-pie-10: #bc80bd;
+$fill-pie-11: #ccebc5;
+$fill-pie-12: #d9d9d9;
+
+$fill-pie-hover-1: #fa5e4c;
+$fill-pie-hover-2: #6cb5e7;
+$fill-pie-hover-3: #71c8b9;
+$fill-pie-hover-4: #ffff78;
+$fill-pie-hover-5: #b2aaea;
+$fill-pie-hover-6: #fda13b;
+$fill-pie-hover-7: #a3d749;
+$fill-pie-hover-8: #fbbadb;
+$fill-pie-hover-9: #ffe848;
+$fill-pie-hover-10: #d26ad3;
+$fill-pie-hover-11: #c6f4bc;
+$fill-pie-hover-12: #c5c5c5;
