--- a/packages/global/styles/export.scss
+++ b/packages/global/styles/export.scss
@@ -21,4 +21,29 @@
 		gridLineColor: $gridLineColor;
 		gridLabelColor: $gridLabelColor;
 		tooltipText: $tooltipText;
+
+		fillPie1: $fill-pie-1;
+		fillPie2: $fill-pie-2;
+		fillPie3: $fill-pie-3;
+		fillPie4: $fill-pie-4;
+		fillPie5: $fill-pie-5;
+		fillPie6: $fill-pie-6;
+		fillPie7: $fill-pie-7;
+		fillPie8: $fill-pie-8;
+		fillPie9: $fill-pie-9;
+		fillPie10: $fill-pie-10;
+		fillPie11: $fill-pie-11;
+		fillPie12: $fill-pie-12;
+		fillPieHover1: $fill-pie-hover-1;
+		fillPieHover2: $fill-pie-hover-2;
+		fillPieHover3: $fill-pie-hover-3;
+		fillPieHover4: $fill-pie-hover-4;
+		fillPieHover5: $fill-pie-hover-5;
+		fillPieHover6: $fill-pie-hover-6;
+		fillPieHover7: $fill-pie-hover-7;
+		fillPieHover8: $fill-pie-hover-8;
+		fillPieHover9: $fill-pie-hover-9;
+		fillPieHover10: $fill-pie-hover-10;
+		fillPieHover11: $fill-pie-hover-11;
+		fillPieHover12: $fill-pie-hover-12;
 }
