style: add padding to charts and other minor style fixes

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -1,5 +1,6 @@
 @import "~@dpc-sdp/ripple-global/style";
 
+$outer-padding: 10px;
 $fill-default: #00A9E0;
 $fill-default-hover: #19C2F9;
 $fill-default-hover-light: #00a9e033;
