--- a/packages/global/styles/export.scss
+++ b/packages/global/styles/export.scss
@@ -26,6 +26,7 @@
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
 		gridLabelColor: $gridLabelColor;
+		tooltipBorder: $tooltipBorder;
 		tooltipText: $tooltipText;
 
 		fillPie1: $fill-pie-1;
