--- a/packages/global/styles/global.scss
+++ b/packages/global/styles/global.scss
@@ -1,1 +1,8 @@
+@function rem-calc($size) {
+  $remSize: $size / 16;
+  @return #{$remSize}rem;
+}
+
+$titleColor: #011a3c;
+$textColor: #53565a;
 $error-bg-color: #af272f0d;
