feat: add autocomplete component

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -3,7 +3,8 @@
 $outer-padding: 10px;
 
 $legendLabelColor: #333333;
-$gridLineColor: #53565a40;
+$gridLineColor: #53565a80;
+$gridLineColorLight: #53565a40;
 $gridLabelColor: #53565a;
 $tooltipBorder: #53565a88;
 $tooltipText: #011a3c;
