--- a/packages/global/styles/export.scss
+++ b/packages/global/styles/export.scss
@@ -12,6 +12,7 @@
 
 		legendLabelColor: $legendLabelColor;
 		gridLineColor: $gridLineColor;
+		gridLineColorLight: $gridLineColorLight;
 		gridLabelColor: $gridLabelColor;
 		tooltipBorder: $tooltipBorder;
 		tooltipText: $tooltipText;
