style: change chart colors

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -13,28 +13,28 @@ $fill-default: #00A9E0;
 $fill-default-hover: #19C2F9;
 $fill-secondary: #003866;
 $fill-secondary-hover: #045495;
-$fill-tertiary: #80D4EF;
-$fill-tertiary-hover: #98daf0;
-$fill-quaternary: #999999;
-$fill-quaternary-hover: #b3b3b3;
+$fill-tertiary: #97999C;
+$fill-tertiary-hover: #b3b3b3;
+$fill-quaternary: #8DD0EC;
+$fill-quaternary-hover: #98daf0;
 
-$stroke-line-1: #FF8912;
-$stroke-line-1-hover: #faa34c;
-$stroke-line-1-hover-light: #faa34c33;
-$stroke-line-2: #F6BE00;
-$stroke-line-2-hover: #fbc513;
-$stroke-line-2-hover-light: #fbc51333;
-$stroke-line-3: #DD003C;
-$stroke-line-3-hover: #f91552;
-$stroke-line-3-hover-light: #f9155233;
-$stroke-line-4: #9F0025;
-$stroke-line-4-hover: #cc0534;
-$stroke-line-4-hover-light: #cc053433;
+$stroke-line-1: #88dbdf;
+$stroke-line-1-hover: #aee7ea;
+$stroke-line-1-hover-light: #aee7ea33;
+$stroke-line-2: #aa0028;
+$stroke-line-2-hover: #db0033;
+$stroke-line-2-hover-light: #db003333;
+$stroke-line-3: #e89cae;
+$stroke-line-3-hover: #f1c5cf;
+$stroke-line-3-hover-light: #f1c5cf33;
+$stroke-line-4: #ef005a;
+$stroke-line-4-hover: #ff2478;
+$stroke-line-4-hover-light: #ff247833;
 
 $fill-default-hover-light: #00a9e033;
 $fill-secondary-hover-light: #004C9733;
-$fill-tertiary-hover-light: #e0a70033;
-$fill-quaternary-hover-light: #c7003333;
+$fill-tertiary-hover-light: #c7003333;
+$fill-quaternary-hover-light: #e0a70033;
 
 
 $tree-map-fill-default: #b2e6f6;
@@ -43,29 +43,29 @@ $tree-map-fill-default-hover: #19C2F9;
 // pie chart
 $fill-pie-1: $fill-default;
 $fill-pie-2: $fill-secondary;
-$fill-pie-3: $fill-tertiary;
-$fill-pie-4: #DD335B;
-$fill-pie-5: #EA8098;
-$fill-pie-6: #AA0028;
-$fill-pie-7: #b3de69;
-$fill-pie-8: #fccde5;
-$fill-pie-9: #ffed6f;
-$fill-pie-10: #bc80bd;
-$fill-pie-11: #ccebc5;
-$fill-pie-12: #d9d9d9;
+$fill-pie-3: $stroke-line-3;
+$fill-pie-4: #c63663;
+$fill-pie-5: $stroke-line-1;
+$fill-pie-6: #00848f;
+$fill-pie-7: #f7cb33;
+$fill-pie-8: #e7801a;
+$fill-pie-9: #78be20;
+$fill-pie-10: #008a58;
+$fill-pie-11: #ef005a;
+$fill-pie-12: #aa0028;
 
-$fill-pie-hover-1: $fill-default-hover;
-$fill-pie-hover-2: $fill-secondary-hover;
-$fill-pie-hover-3: $fill-tertiary-hover;
-$fill-pie-hover-4: #e54368;
-$fill-pie-hover-5: #ed97ab;
-$fill-pie-hover-6: #d60536;
-$fill-pie-hover-7: #a3d749;
-$fill-pie-hover-8: #fbbadb;
-$fill-pie-hover-9: #ffe848;
-$fill-pie-hover-10: #d26ad3;
-$fill-pie-hover-11: #c6f4bc;
-$fill-pie-hover-12: #c5c5c5;
+$fill-pie-hover-1: #0087b3;
+$fill-pie-hover-2: #002747;
+$fill-pie-hover-3: #dd7a8f;
+$fill-pie-hover-4: #b7274e;
+$fill-pie-hover-5: #58c4ca;
+$fill-pie-hover-6: #006571;
+$fill-pie-hover-7: #f4af00;
+$fill-pie-hover-8: #df6200;
+$fill-pie-hover-9: #78be20;
+$fill-pie-hover-10: #007445;
+$fill-pie-hover-11: #cb003b;
+$fill-pie-hover-12: #7f001e;
 
 // error styles
 $error-grid-size: 50px 50px;
