feat: add examples 1 and 2

--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -18,18 +18,18 @@ $fill-tertiary-hover: #b3b3b3;
 $fill-quaternary: #8DD0EC;
 $fill-quaternary-hover: #98daf0;
 
-$stroke-line-1: #88dbdf;
-$stroke-line-1-hover: #aee7ea;
-$stroke-line-1-hover-light: #aee7ea33;
-$stroke-line-2: #aa0028;
-$stroke-line-2-hover: #db0033;
-$stroke-line-2-hover-light: #db003333;
-$stroke-line-3: #e89cae;
-$stroke-line-3-hover: #f1c5cf;
-$stroke-line-3-hover-light: #f1c5cf33;
-$stroke-line-4: #ef005a;
-$stroke-line-4-hover: #ff2478;
-$stroke-line-4-hover-light: #ff247833;
+$stroke-line-1: #007ea7;
+$stroke-line-1-hover: #00a4db;
+$stroke-line-1-hover-light: #00a4db33;
+$stroke-line-2: #aa0031;
+$stroke-line-2-hover: #db003e;
+$stroke-line-2-hover-light: #db003e33;
+$stroke-line-3: #c75300;
+$stroke-line-3-hover: #fa6800;
+$stroke-line-3-hover-light: #fa680033;
+$stroke-line-4: #003866;
+$stroke-line-4-hover: #005499;
+$stroke-line-4-hover-light: #00549933;
 
 $fill-default-hover-light: #00a9e033;
 $fill-secondary-hover-light: #004C9733;
