--- a/packages/global/styles/charts.scss
+++ b/packages/global/styles/charts.scss
@@ -43,29 +43,29 @@ $tree-map-fill-default-hover: #19C2F9;
 // pie chart
 $fill-pie-1: $fill-default;
 $fill-pie-2: $fill-secondary;
-$fill-pie-3: $stroke-line-3;
+$fill-pie-3: #6C6F72;
 $fill-pie-4: #c63663;
-$fill-pie-5: $stroke-line-1;
-$fill-pie-6: #00848f;
-$fill-pie-7: #f7cb33;
-$fill-pie-8: #e7801a;
-$fill-pie-9: #78be20;
-$fill-pie-10: #008a58;
-$fill-pie-11: #ef005a;
-$fill-pie-12: #aa0028;
+$fill-pie-5: #00818b;
+$fill-pie-6: #c94000;
+$fill-pie-7: #007b4b;
+$fill-pie-8: #cb003b;
+$fill-pie-9: #006e91;
+$fill-pie-10: #9f0025;
+$fill-pie-11: #53565a;
+$fill-pie-12: #3b5e0f;
 
 $fill-pie-hover-1: #0087b3;
 $fill-pie-hover-2: #002747;
-$fill-pie-hover-3: #dd7a8f;
+$fill-pie-hover-3: #53565a;
 $fill-pie-hover-4: #b7274e;
-$fill-pie-hover-5: #58c4ca;
-$fill-pie-hover-6: #006571;
-$fill-pie-hover-7: #f4af00;
-$fill-pie-hover-8: #df6200;
-$fill-pie-hover-9: #78be20;
-$fill-pie-hover-10: #007445;
-$fill-pie-hover-11: #cb003b;
-$fill-pie-hover-12: #7f001e;
+$fill-pie-hover-5: #006571;
+$fill-pie-hover-6: #d44600;
+$fill-pie-hover-7: #005e33;
+$fill-pie-hover-8: #aa0031;
+$fill-pie-hover-9: #00546f;
+$fill-pie-hover-10: #74001b;
+$fill-pie-hover-11: #45474b;
+$fill-pie-hover-12: #233809;
 
 // error styles
 $error-grid-size: 50px 50px;
