fix: add example back

--- a/examples/vue-example-app/src/variables.scss
+++ b/examples/vue-example-app/src/variables.scss
@@ -1,8 +1,8 @@
 @import '~@dpc-sdp/ripple-global/scss/settings/functions';
 
 $rpl-colors: (
-  'primary': #e63946,
-  'dark_primary': #af1a26,
+  'primary': #0052c2,
+  'dark_primary': #023b89,
   'secondary': #a8dadc,
   'extra_dark_neutral': #1d3557,
   'dark_neutral': #457b9d,
