--- a/packages/global/styles/export.scss
+++ b/packages/global/styles/export.scss
@@ -42,28 +42,28 @@
 		treeMapFillDefault: $tree-map-fill-default;
 		treeMapFillDefaultHover: $tree-map-fill-default-hover;
 
-		fillPie1: $fill-pie-1;
-		fillPie2: $fill-pie-2;
-		fillPie3: $fill-pie-3;
-		fillPie4: $fill-pie-4;
-		fillPie5: $fill-pie-5;
-		fillPie6: $fill-pie-6;
-		fillPie7: $fill-pie-7;
-		fillPie8: $fill-pie-8;
-		fillPie9: $fill-pie-9;
-		fillPie10: $fill-pie-10;
-		fillPie11: $fill-pie-11;
-		fillPie12: $fill-pie-12;
-		fillPieHover1: $fill-pie-hover-1;
-		fillPieHover2: $fill-pie-hover-2;
-		fillPieHover3: $fill-pie-hover-3;
-		fillPieHover4: $fill-pie-hover-4;
-		fillPieHover5: $fill-pie-hover-5;
-		fillPieHover6: $fill-pie-hover-6;
-		fillPieHover7: $fill-pie-hover-7;
-		fillPieHover8: $fill-pie-hover-8;
-		fillPieHover9: $fill-pie-hover-9;
-		fillPieHover10: $fill-pie-hover-10;
-		fillPieHover11: $fill-pie-hover-11;
-		fillPieHover12: $fill-pie-hover-12;
+		fill1: $fill-1;
+		fill2: $fill-2;
+		fill3: $fill-3;
+		fill4: $fill-4;
+		fill5: $fill-5;
+		fill6: $fill-6;
+		fill7: $fill-7;
+		fill8: $fill-8;
+		fill9: $fill-9;
+		fill10: $fill-10;
+		fill11: $fill-11;
+		fill12: $fill-12;
+		fillHover1: $fill-hover-1;
+		fillHover2: $fill-hover-2;
+		fillHover3: $fill-hover-3;
+		fillHover4: $fill-hover-4;
+		fillHover5: $fill-hover-5;
+		fillHover6: $fill-hover-6;
+		fillHover7: $fill-hover-7;
+		fillHover8: $fill-hover-8;
+		fillHover9: $fill-hover-9;
+		fillHover10: $fill-hover-10;
+		fillHover11: $fill-hover-11;
+		fillHover12: $fill-hover-12;
 }
